--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Homepage</h1>
-    <a href="https://www.theodinproject.com/about" target="_blank">click me</a>
+<h1>Odin Recipes</h1>
+<ul>
+    <li><a href="recipes/lasagna.html">Lasagna</a></li>
+    <li><a href="recipes/shrimp.html">Crunchy Fried Shrimp</a></li>
+</ul>
 </body>
 </html>
